# shopify_api

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  test.rs
.github/workflows/: ci.yml  publish.yml
graphql_to_string/: Cargo.toml
graphql_to_string/src/: lib.rs
src/: auth.rs  graphql.rs  lib.rs  main.rs  schema.rs  utils.rs
src/graphql/: bulk_mutation.rs  bulk_query.rs  mod.rs  types.rs
src/graphql/composer/: global.rs  mod.rs  product.rs
src/rest/: mod.rs
src/webhooks/: mod.rs  verify.rs  webhook.rs
src/webhooks/frameworks/: mod.rs  warp.rs
tests/: live.rs
