[package]
name = "shopify_api"
description = "Shopify API client"
documentation = "https://docs.rs/shopify_api"
readme = "README.md"
repository = "https://github.com/0xtlt/shopify_api"
version = "0.9.4"
edition = "2021"
keywords = ["shopify", "api", "client"]
categories = ["api-bindings", "web-programming"]
license = "MIT"
authors = ["Thomas Tastet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde_json = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = "0.4"
tokio = { version = "1", features = ["time"] }
log = "0.4"
simple_logger = "4.3"
thiserror = "1.0"
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
warp = { version = "0.3", optional = true, default-features = false, features = [] }
bytes = { version = "1.6", optional = true }
graphql_client = { version = "0.14", optional = true }
serde_path_to_error = { version = "0.1", optional = true }


[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["full", "rustls"]
warp-wrapper = ["warp", "bytes"]
graphql-client = ["graphql_client"]
full = ["default", "webhooks", "graphql-client", "debug"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
webhooks = ["hmac", "sha2", "base64"]
debug = ["serde_path_to_error"]
