[package]
name = "shopify_api"
description = "Shopify API client"
documentation = "https://docs.rs/shopify_api"
readme = "README.md"
repository = "https://github.com/0xtlt/shopify_api"
version = "0.10.0"
edition = "2021"
rust-version = "1.85"
keywords = ["shopify", "api", "client"]
categories = ["api-bindings", "web-programming"]
license = "MIT"
authors = ["Thomas Tastet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["form", "json", "multipart"] }
serde_json = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
log = "0.4"
simple_logger = "5.2.0"
thiserror = "2.0.18"
hmac = { version = "0.13.0", optional = true }
sha2 = { version = "0.11.0", optional = true }
base64 = { version = "0.22", optional = true }
warp = { version = "0.4.3", optional = true, default-features = false, features = [] }
bytes = { version = "1.6", optional = true }
graphql_client = { version = "0.16.0", optional = true }
serde_path_to_error = { version = "0.1", optional = true }
clap = { version = "4.6.1", features = ["derive"], optional = true }

[[bin]]
name = "shopify-api"
path = "src/bin/shopify-api.rs"
required-features = ["cli"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["rustls"]
warp-wrapper = ["warp", "bytes"]
graphql-client = ["graphql_client"]
full = ["webhooks", "graphql-client", "debug", "cli"]
rustls = ["reqwest/rustls"]
native-tls = ["reqwest/native-tls"]
webhooks = ["hmac", "sha2", "base64"]
debug = ["serde_path_to_error"]
cli = ["dep:clap"]
hmac = ["dep:hmac"]
sha2 = ["dep:sha2"]
warp = ["dep:warp"]
graphql_client = ["dep:graphql_client"]
